--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,38 +1,118 @@
-.App {
-  text-align: center;
+body {
+	margin: 0;
+	padding: 0;
+}
+.back {
+	height: 100vh;
+	padding-bottom: 100px;
+	background: lavender;
+}
+h1 {
+	margin-top: 0;
+	padding-top: 20px;
+}
+.header {
+	text-align: center;
+	font-weight: bold;
+}
+.table {
+	background: white;
+	border: 3px solid darkblue;
+	border-collapse: collapse;
+	margin: 0 auto;
+}
+th {
+	height: 30px;
+	border-bottom: 2px solid red;
+}
+td {
+	border: 2px solid darkblue;
+	margin: 0;
+	padding: 0 5px;
+}
+#tId {
+	width: 20%;
+}
+#tReps {
+	width: 10%;
+	text-align: center;
+}
+#tDesc {
+	width: 40%;
+}
+#tUpd, #tDel {
+	width: 15%;
+	text-align: center;
+	padding: 0;
+}
+a:link, a:visited, a:hover, a:active {
+	color: black;
+}
+#bUpd, #bDel {
+	cursor: pointer;
+	height: 100%;
+	background: deepskyblue;
+	text-align: center;
+	color: black;
+	font-weight: bold;
+	text-decoration: underline;
+	margin: 0;
+	padding: 5px 0;
+}
+#bDel {
+	background: red;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+/* Add Form Area */
+#add {
+	text-align: center;
+	margin: 30px auto;
+}
+.bAdd {
+	border: 2px solid darkgreen;
+	border-radius: 15px;
+	background: lime;
+	font-size: 15px;
+	font-weight: bold;
+	text-decoration: none;
+	padding: 5px 10px;
+}
+#bCxl {
+	background: red;
+	margin-left: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input {
+	height: 25px;
+	width: 250px;
+	color: black;
+	font-size: 18px;
+	border-radius: 5px;
+	margin-bottom: 10px;
+}
+textarea {
+	width: 250px;
+	height: 70px;
+	color: black;
+	font-size: 18px;
+	resize: none;
+	border-width: 2px;
+	border-style: inset;
+	border-color: initial;
+	border-radius: 5px;
+	margin-bottom: 20px;
+	padding: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Update Form Area */
+#updCont {
+	text-align: center;
+	margin: 0 auto;
 }
-
-.App-link {
-  color: #61dafb;
+h2 {
+	margin-top: 0;
+	padding-top: 20px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#noUnd {
+	text-decoration: none;
 }
